--- a/env.example
+++ b/env.example
@@ -1,25 +1,31 @@
-# Server
+# Configuración del servidor
 PORT=3000
 NODE_ENV=development
 
-# Database
-DATABASE_URL=postgresql://username:password@localhost:5432/vendex_claude
+# Base de datos - Supabase (Recomendado)
+DATABASE_URL=postgresql://postgres:tu-password@db.tu-project-id.supabase.co:5432/postgres
+SUPABASE_URL=https://tu-project-id.supabase.co
+SUPABASE_ANON_KEY=tu-anon-key
+SUPABASE_SERVICE_ROLE_KEY=tu-service-role-key
 
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-here
+# Autenticación
+JWT_SECRET=tu-jwt-secret-super-seguro
 
-# Stripe
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+# Stripe (Pagos)
+STRIPE_SECRET_KEY=sk_test_tu-stripe-secret-key
+STRIPE_WEBHOOK_SECRET=whsec_tu-stripe-webhook-secret
 
-# Anthropic (Claude)
-ANTHROPIC_API_KEY=sk-ant-your_anthropic_api_key
+# Anthropic Claude (IA)
+ANTHROPIC_API_KEY=sk-ant-tu-anthropic-api-key
 
 # UltraMsg (WhatsApp)
-ULTRAMSG_INSTANCE_ID=your_instance_id
-ULTRAMSG_CLIENT_ID=your_client_id
-ULTRAMSG_TOKEN=your_token
+ULTRAMSG_INSTANCE_ID=tu-ultramsg-instance-id
+ULTRAMSG_CLIENT_ID=tu-ultramsg-client-id
+ULTRAMSG_TOKEN=tu-ultramsg-token
 
-# File Upload
+# Archivos
 UPLOAD_PATH=./uploads
-MAX_FILE_SIZE=5242880 
+MAX_FILE_SIZE=5242880
+
+# Frontend URL (para CORS)
+FRONTEND_URL=http://localhost:3000 
