--- a/package.json
+++ b/package.json
@@ -7,35 +7,41 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest"
+    "test": "jest",
+    "test:db": "node -e \"require('dotenv').config(); const { Pool } = require('pg'); const pool = new Pool({ connectionString: process.env.DATABASE_URL }); pool.query('SELECT 1', (err, res) => { if (err) { console.error('Error:', err.message); process.exit(1); } else { console.log('Database connection successful'); process.exit(0); } });\"",
+    "postinstall": "npm run build"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
-    "stripe": "^14.5.0",
-    "@anthropic-ai/sdk": "^0.9.1",
+    "@anthropic-ai/sdk": "^0.59.0",
     "axios": "^1.6.0",
-    "multer": "^1.4.5-lts.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
-    "express-rate-limit": "^7.1.5"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "stripe": "^14.5.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/pg": "^8.10.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.9.0",
-    "typescript": "^5.2.2",
+    "@types/pg": "^8.10.9",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.8"
+    "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
-} 
+}
