--- a/env.example
+++ b/env.example
@@ -2,23 +2,23 @@
 PORT=3000
 NODE_ENV=development
 
-# Base de datos - Supabase (Recomendado)
-DATABASE_URL=postgresql://postgres:tu-password@db.tu-project-id.supabase.co:5432/postgres
-SUPABASE_URL=https://tu-project-id.supabase.co
-SUPABASE_ANON_KEY=tu-anon-key
-SUPABASE_SERVICE_ROLE_KEY=tu-service-role-key
+# Base de datos - MongoDB Atlas
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true&w=majority
 
 # Autenticación
-JWT_SECRET=tu-jwt-secret-super-seguro
+JWT_SECRET=tu-jwt-secret-super-seguro-y-largo-para-produccion
 
 # Stripe (Pagos)
+# Obtén estas claves desde tu panel de desarrollador de Stripe
 STRIPE_SECRET_KEY=sk_test_tu-stripe-secret-key
 STRIPE_WEBHOOK_SECRET=whsec_tu-stripe-webhook-secret
 
 # Anthropic Claude (IA)
+# Obtén tu clave API de Anthropic
 ANTHROPIC_API_KEY=sk-ant-tu-anthropic-api-key
 
 # UltraMsg (WhatsApp)
+# Obtén estos datos desde tu panel de UltraMsg
 ULTRAMSG_INSTANCE_ID=tu-ultramsg-instance-id
 ULTRAMSG_CLIENT_ID=tu-ultramsg-client-id
 ULTRAMSG_TOKEN=tu-ultramsg-token
@@ -28,4 +28,4 @@ UPLOAD_PATH=./uploads
 MAX_FILE_SIZE=5242880
 
 # Frontend URL (para CORS)
-FRONTEND_URL=http://localhost:3000 
+FRONTEND_URL=http://localhost:8080 
